[project]
name = "cluster-credit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-airflow>=3.1.6",
    "kaggle>=1.8.3",
    "mlflow>=2.9.2",
    "numpy>=2.4.1",
    "pandas>=2.0.0,<3",
    "psycopg2-binary>=2.9.9",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=1.4.0",
    "streamlit>=1.32.0",
]
